feat: Implement Invite Code Management and Collaborator Notifications
- Added InviteCodeRepository for managing invite codes.
- Enhanced UserRepository with email existence check.
- Created CollaboratorService to handle invite code acceptance, generation, and collaborator management.
- Introduced ICollaboratorService interface for service abstraction.
- Updated EmailService to send direct email invitations with generated codes.
- Implemented notification system for new collaborators joining memorials.
- Enhanced MemorialService to support collaborative features and user ownership checks.
- Added helper methods for building responses and managing user permissions.